fix(material/slide-toggle): no outline when selected in high contrast mode (#28979)
Fixes that the M3 slide toggle didn't have an outline when it's selected in high contrast mode.

(cherry picked from commit dde37939e9ecae32c55e1593cfb76bf8f5842741)

--- a/src/material/slide-toggle/slide-toggle.scss
+++ b/src/material/slide-toggle/slide-toggle.scss
@@ -223,6 +223,7 @@
   .mdc-switch--selected .mdc-switch__track::after,
   .mdc-switch--selected .mdc-switch__track::before {
     @include token-utils.create-token-slot(border-width, selected-track-outline-width);
+    @include token-utils.create-token-slot(border-color, selected-track-outline-color);
   }
 
   .mdc-switch--disabled .mdc-switch__track::after,
